// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Domain/EntityEditorOverview Normal 1`] = `
<div>
  <div>
    <button
      className="dd button has-background hoverable text-button is-rounded"
      id="create-entity-picker"
      onClick={[Function]}
      type="button"
    >
      Create
       
      <span
        className="dd icon icon-chevron-down"
      />
    </button>
  </div>
  <div>
    <a
      href="#fc66b4d7-61ff-44d4-8f68-cb7f526df046"
    >
      Foo 1
    </a>
  </div>
  <div>
    <a
      href="#cb228716-d3dd-444f-9a77-80443d436339"
    >
      Bar 1
    </a>
  </div>
  <div>
    <a
      href="#eb5732e2-b931-492b-82f1-f8fdd464f0d2"
    >
      Bar 2
    </a>
  </div>
  <div>
    <a
      href="#fb62be03-a0a9-4689-9987-bacee0e7692d"
    >
      Foo deleted
    </a>
  </div>
</div>
`;

exports[`Storyshots Domain/EntityEditorOverview Slow 1`] = `
<div>
  <div>
    <button
      className="dd button has-background hoverable text-button is-rounded"
      id="create-entity-picker"
      onClick={[Function]}
      type="button"
    >
      Create
       
      <span
        className="dd icon icon-chevron-down"
      />
    </button>
  </div>
  <div>
    <a
      href="#fc66b4d7-61ff-44d4-8f68-cb7f526df046"
    >
      Unnamed
    </a>
  </div>
  <div>
    <a
      href="#cb228716-d3dd-444f-9a77-80443d436339"
    >
      Unnamed
    </a>
  </div>
  <div>
    <a
      href="#eb5732e2-b931-492b-82f1-f8fdd464f0d2"
    >
      Unnamed
    </a>
  </div>
  <div>
    <a
      href="#fb62be03-a0a9-4689-9987-bacee0e7692d"
    >
      Unnamed
    </a>
  </div>
</div>
`;
